# loan_preQualification

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  GITHUB_SETUP.md  Makefile  PRODUCTION_READY_SUMMARY.md  README.md  RUNNING_SERVICES.md  code-review-updated.md  code-review.md  docker-compose.yml  push_to_github.sh  pyproject.toml  tech-design-review-v2.md  tech-design.md
.claude/commands/: code-review.md  devloment.md  tech-design-review.md  tech-design.md
.github/: README.md
.github/workflows/: ci.yml
docs/: requirement.md
infrastructure/grafana/dashboards/: prequal-api-dashboard.json
infrastructure/postgres/: alembic.ini
infrastructure/postgres/migrations/: env.py
infrastructure/postgres/migrations/versions/: 20251029_1456_initial_schema_with_all_tables.py
scripts/: generate_encryption_key.py  run_credit_service.sh  run_decision_service.sh  run_prequal_api.sh
services/: __init__.py
services/credit-service/: .env.example  Dockerfile
services/credit-service/app/: __init__.py  consumer.py  logic.py  main.py
services/credit-service/tests/: __init__.py  test_consumer_integration.py  test_logic.py
services/decision-service/: .env.example  Dockerfile
services/decision-service/app/: __init__.py  consumer.py  logic.py  main.py  repository.py
services/decision-service/tests/: __init__.py  test_logic.py
services/prequal-api/: .env.example  Dockerfile
services/prequal-api/app/: __init__.py  db.py  main.py  models.py  outbox_publisher.py  services.py
services/prequal-api/tests/: __init__.py  conftest.py  test_api.py  test_api_integration.py  test_api_simple.py  test_db_integration.py
services/shared/: __init__.py  encryption.py
services/shared/tests/: __init__.py  test_encryption.py
tests/: README.md  __init__.py  conftest.py  test_e2e_workflow.py
